--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,16 +13,22 @@ body {
   font-weight: 300;
 }
 
-.cl-internal-1dauvpw, .cl-internal-1hp5nqm{
+.cl-internal-1dauvpw,
+.cl-internal-1hp5nqm {
   display: none;
 }
 
-.cl-userPreviewSecondaryIdentifier{
+.cl-userPreviewSecondaryIdentifier {
   font-size: 12px;
   color: rgb(199, 199, 199);
 }
 
-.banner{
+.cl-formFieldInputGroup,
+.cl-formFieldInput {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.banner {
   filter: drop-shadow(0px 0px 17px #c078ff20);
 }
 
