--- a/src/app/(root)/globals.css
+++ b/src/app/(root)/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: Multiround;
-  src: url(./fonts/MultiroundPro.otf);
+  src: url(../fonts/MultiroundPro.otf);
 }
 
 body {
